# Astrololo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IDEA.md  IMPROVEMENTS.md  LICENSE  PHAN_TICH_NANG_CAP.md  PLAN_TRA_CUU_BAN_DO_SAO.md  PROJECT_STATUS_PHASE1_COMPLETE.md  README.md  TICH_HOP_KIEN_THUC.md  docker-compose.yml  run.bat  start.bat
backend/: pyproject.toml  requirements.txt
backend/astrololo/: __init__.py
backend/astrololo/analysis/: benchmark.py  distributions.py  export_pdf.py  jyotish_natal.py  life_areas.py  midpoints.py  natal.py  progression.py  solar_return.py  synastry.py  transit.py  transit_interpretation.py
backend/astrololo/api/: main.py
backend/astrololo/core/: aspects.py  constants.py  coordinates.py  dasha.py  ephemeris.py  fixed_stars.py  houses.py  jyotish_constants.py  jyotish_points.py  points.py  validation.py
backend/astrololo/interpretation/: ai_engine.py  (+13 more)
backend/scripts/: _test_scraper.py  astrolib_full.yaml  astrolib_sign.yaml  astrolib_sign_log.txt  clean_vi_aspects.py  filter_bad_entries.py  generate_enriched_templates.py  import_crawl_kb.py  merge_astrolibrary.py  save_house_cusp.py  scrape_astrolibrary.py  scrape_astrologycom.py  scrape_capricorn_cusp.py  translate_aspects.py  translate_long_aspects.py
backend/tests/: backtest.py  test_aspect_status_real.py  test_cafeastrology.py  test_deconflict.py  test_dignity_scoring.py  test_dominant_scoring.py  test_engine.py  test_ephemeris_accuracy.py  test_keywords.py  test_life_areas.py  test_predictive_aspect_status.py  test_rules.py
(+121 files in other folders)
