[project]
name = "astrololo"
version = "0.1.0"
description = "High-precision astrology interpretation engine with Vietnamese support"
requires-python = ">=3.11"
dependencies = [
    "pyswisseph>=2.10.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pytz>=2024.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
